--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "eslint-plugin-import": "^2.20.1",
         "eslint-plugin-jsx-a11y": "^6.2.3",
         "eslint-plugin-react": "^7.19.0",
+        "prop-types": "^15.7.2",
         "react": "^16.13.0",
         "react-dom": "^16.13.0"
     },
@@ -41,6 +42,7 @@
         "eslint-plugin-import": "^2.20.1",
         "eslint-plugin-jsx-a11y": "^6.2.3",
         "eslint-plugin-react": "^7.19.0",
+        "file-loader": "^6.0.0",
         "html-loader": "^0.5.5",
         "html-webpack-plugin": "^3.2.0",
         "mini-css-extract-plugin": "^0.9.0",
