--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "webpack --mode production",
-        "start": "webpack-dev-server --open --mode development"
+        "start": "webpack-dev-server --open --mode development --port 8081"
     },
     "repository": {
         "type": "git",
@@ -28,7 +28,8 @@
         "eslint-plugin-react": "^7.19.0",
         "prop-types": "^15.7.2",
         "react": "^16.13.0",
-        "react-dom": "^16.13.0"
+        "react-dom": "^16.13.0",
+        "react-router-dom": "^5.1.2"
     },
     "devDependencies": {
         "@babel/core": "^7.8.7",
