--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "homepage": "https://github.com/Javieravv/PlatziVideoReact#readme",
     "dependencies": {
         "babel-eslint": "^10.1.0",
+        "classnames": "^2.2.6",
         "eslint": "^6.8.0",
         "eslint-config-airbnb": "^18.1.0",
         "eslint-plugin-import": "^2.20.1",
