--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     },
     "homepage": "https://github.com/Javieravv/PlatziVideoReact#readme",
     "dependencies": {
+        "@babel/register": "^7.10.1",
         "babel-eslint": "^10.1.0",
         "classnames": "^2.2.6",
+        "dotenv": "^8.2.0",
         "eslint": "^6.8.0",
         "eslint-config-airbnb": "^18.1.0",
         "eslint-plugin-import": "^2.20.1",
         "eslint-plugin-jsx-a11y": "^6.2.3",
         "eslint-plugin-react": "^7.19.0",
+        "express": "^4.17.1",
         "md5": "^2.2.1",
         "prop-types": "^15.7.2",
         "react": "^16.13.0",
