--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "webpack.config.js",
     "scripts": {
         "build": "webpack --mode production",
-        "start": "webpack-dev-server --open --mode development"
+        "start": "webpack-dev-server --open --mode development",
+        "start:dev": "nodemon src/server/index"
     },
     "repository": {
         "type": "git",
@@ -20,6 +21,7 @@
     "homepage": "https://github.com/Javieravv/PlatziVideoReact#readme",
     "dependencies": {
         "@babel/register": "^7.10.1",
+        "asset-require-hook": "^1.2.0",
         "babel-eslint": "^10.1.0",
         "classnames": "^2.2.6",
         "dotenv": "^8.2.0",
@@ -29,13 +31,21 @@
         "eslint-plugin-jsx-a11y": "^6.2.3",
         "eslint-plugin-react": "^7.19.0",
         "express": "^4.17.1",
+        "history": "^4.10.1",
+        "ignore-styles": "^5.0.1",
         "md5": "^2.2.1",
         "prop-types": "^15.7.2",
         "react": "^16.13.0",
         "react-dom": "^16.13.0",
+        "react-hot-loader": "^4.12.21",
         "react-redux": "^7.2.0",
-        "react-router-dom": "^5.1.2",
-        "redux": "^4.0.5"
+        "react-router": "^5.2.0",
+        "react-router-config": "^5.1.1",
+        "react-router-dom": "^5.2.0",
+        "redux": "^4.0.5",
+        "webpack": "^4.43.0",
+        "webpack-dev-middleware": "^3.7.2",
+        "webpack-hot-middleware": "^2.25.0"
     },
     "devDependencies": {
         "@babel/core": "^7.8.7",
@@ -55,7 +65,6 @@
         "mini-css-extract-plugin": "^0.9.0",
         "node-sass": "^4.14.1",
         "sass-loader": "^8.0.2",
-        "webpack": "^4.42.0",
         "webpack-cli": "^3.3.11",
         "webpack-dev-server": "^3.11.0"
     }
