--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-    "name": "PlatziVideoReact",
+    "name": "platzivideoreact",
     "version": "1.0.0",
     "description": "",
     "main": "webpack.config.js",
     "scripts": {
-        "build": "webpack --mode production",
+        "build:dev": "webpack --mode production",
+        "build:prod": "webpack-cli --config webpack.config.js",
         "start": "webpack-dev-server --open --mode development",
-        "start:dev": "nodemon src/server/index"
+        "start:dev": "nodemon src/server/index",
+        "lint": "eslint src/frontend --ext .js --ext .jsx --fix"
     },
     "repository": {
         "type": "git",
@@ -25,18 +27,16 @@
         "babel-eslint": "^10.1.0",
         "classnames": "^2.2.6",
         "dotenv": "^8.2.0",
-        "eslint": "^6.8.0",
         "eslint-config-airbnb": "^18.1.0",
-        "eslint-plugin-import": "^2.20.1",
         "eslint-plugin-jsx-a11y": "^6.2.3",
-        "eslint-plugin-react": "^7.19.0",
         "express": "^4.17.1",
+        "helmet": "^3.22.0",
         "history": "^4.10.1",
         "ignore-styles": "^5.0.1",
         "md5": "^2.2.1",
         "prop-types": "^15.7.2",
-        "react": "^16.13.0",
-        "react-dom": "^16.13.0",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
         "react-hot-loader": "^4.12.21",
         "react-redux": "^7.2.0",
         "react-router": "^5.2.0",
@@ -45,26 +45,28 @@
         "redux": "^4.0.5",
         "webpack": "^4.43.0",
         "webpack-dev-middleware": "^3.7.2",
-        "webpack-hot-middleware": "^2.25.0"
+        "webpack-hot-middleware": "^2.25.0",
+        "webpack-manifest-plugin": "^2.2.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.8.7",
-        "@babel/preset-env": "^7.8.7",
-        "@babel/preset-react": "^7.8.3",
+        "@babel/core": "^7.10.2",
+        "@babel/preset-env": "^7.10.2",
+        "@babel/preset-react": "^7.10.1",
         "babel-eslint": "^10.1.0",
-        "babel-loader": "^8.0.6",
-        "css-loader": "^3.4.2",
+        "babel-loader": "^8.1.0",
+        "compression-webpack-plugin": "^4.0.0",
+        "css-loader": "^3.5.3",
         "eslint": "^6.8.0",
         "eslint-config-airbnb": "^18.1.0",
-        "eslint-plugin-import": "^2.20.1",
+        "eslint-loader": "^4.0.2",
+        "eslint-plugin-import": "^2.20.2",
         "eslint-plugin-jsx-a11y": "^6.2.3",
-        "eslint-plugin-react": "^7.19.0",
+        "eslint-plugin-react": "^7.20.0",
         "file-loader": "^6.0.0",
-        "html-loader": "^0.5.5",
-        "html-webpack-plugin": "^3.2.0",
         "mini-css-extract-plugin": "^0.9.0",
         "node-sass": "^4.14.1",
         "sass-loader": "^8.0.2",
+        "terser-webpack-plugin": "^3.0.3",
         "webpack-cli": "^3.3.11",
         "webpack-dev-server": "^3.11.0"
     }
